<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="b1">Spotify Streamer</string>
    <string name="b2">Scores App</string>
    <string name="b3">Library App</string>
    <string name="b4">Build it Bigger</string>
    <string name="b5">Bacon Reader</string>
    <string name="b6">Capstone: My Own App</string>
    <string name="title">All the buttons</string>
</resources>
