<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="#dba61e">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        android:id="@+id/button"
        android:onClick="sendMessage"
        android:background="#ffffff"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:id="@+id/button2"
        android:layout_marginTop="27dp"
        android:onClick="sendMessage"
        android:background="#ffffff"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:id="@+id/button3"
        android:onClick="sendMessage"
        android:background="#ffffff"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="29dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4"
        android:id="@+id/button4"
        android:layout_marginTop="31dp"
        android:onClick="sendMessage"
        android:background="#ffffff"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b5"
        android:id="@+id/button5"
        android:layout_marginTop="29dp"
        android:onClick="sendMessage"
        android:background="#ffffff"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b6"
        android:id="@+id/button6"
        android:onClick="sendMessage"
        android:background="#f45050"
        android:alpha="100"
        android:textColor="#0036ff"
        android:shadowColor="#f12020"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />
</RelativeLayout>
